@@ -17,7 +17,7 @@
     <parent>
         <groupId>com.github.hazendaz</groupId>
         <artifactId>base-parent</artifactId>
-        <version>18</version>
+        <version>20</version>
         <relativePath />
     </parent>
 
@@ -92,12 +92,12 @@
 
     <properties>
         <c3p0.version>0.9.5.2</c3p0.version>
-        <javabean-tester.version>2.0.0</javabean-tester.version>
-        <jmockit.version>1.41</jmockit.version> <!-- TODO: 42 breaks -->
-        <junit.version>5.3.0</junit.version>
-        <ojdbc.version>12.2.0.1</ojdbc.version>
+        <javabean-tester.version>2.1.1</javabean-tester.version>
+        <jmockit.version>1.44</jmockit.version>
+        <junit.version>5.3.2</junit.version>
+        <ojdbc.version>18.3.0.0</ojdbc.version>
         <servlet.version>4.0.1</servlet.version>
-        <ucp.version>12.2.0.1</ucp.version>
+        <ucp.version>18.3.0.0</ucp.version>
 
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
@@ -105,6 +105,8 @@
         <maven.compiler.testTarget>1.8</maven.compiler.testTarget>
 
         <signature.artifact>java18</signature.artifact>
+
+        <argLine>-javaagent:${settings.localRepository}/org/jmockit/jmockit/${jmockit.version}/jmockit-${jmockit.version}.jar -Djdk.attach.allowAttachSelf</argLine>
     </properties>
 
     <repositories>
